# daqmx

./: .gitignore  LICENSE  README.md  daqmx.py  pyproject.toml  setup.py  test.py
daqmx/: __init__.py  channels.py  core.py  daqmx.py  tasks.py  test_daqmx.py  tests.py  threads.py
examples/: ai_di_example.py  ai_example.py  cont_gen_int_clk.py  experiment_run.py  nonsynch_ai_ao.py  pulse_example.py  pulse_example_motion.py  pyqtgraph_ai.py  synch_ai_ao.py
examples/PyQt/: daqmx_pyqt.py  mainwindow.py  mainwindow.ui  wavegen.py
examples/PyQt/npy/: test_data.npy
