[build-system]
requires = ["setuptools"]

[project]
authors = [{name = "Pete Bachant", email = "petebachant@gmail.com"}]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Multimedia :: Graphics",
  "Operating System :: OS Independent",
]
dependencies = [
  "h5py",
  "pandas",
  "PyDAQmx",
]
description = "A wrapper for the NI DAQmx driver"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "daqmx"
readme = "README.md"
requires-python = ">=3.5"

[project.urls]
Source = "https://github.com/petebachant/daqmx"

[tool.setuptools.dynamic]
version = {attr = "daqmx.__version__"}
